2001-02-20  Pavel  <pavel@eazel.com>

	reviewed by: Rebecca Schulman <rebecka@eazel.com>

	* libgnomevfs/gnome-vfs-cancellable-ops.h:
	* libgnomevfs/gnome-vfs-context.h:
	* libgnomevfs/gnome-vfs-private-types.h:
	* libgnomevfs/gnome-vfs-types.h:
	
	Fixmore Medusa build breakage, part 1.

2001-02-20  Darin Adler  <darin@eazel.com>

	reviewed by: Mike Fleming <mfleming@eazel.com>

	* libgnomevfs/gnome-vfs-process.c: (sigchld_handler): Fix
	uninitialized variable problem (reported by danw I think).
	* libgnomevfs/gnome-vfs-utils.c:
	(gnome_vfs_get_local_path_from_uri): Simplify function and make it
	return NULL with # characters.
	
	* test/test-uri.c: (main): Update tests to match the change to
	gnome_vfs_get_local_path_from_uri.
	
	* libgnomevfs-pthread/gnome-vfs-job.c: Improve a variable name.

	* mime-type-capplet/.cvsignore: Ignore the executable under its
	new name, not its old name.

2001-02-20  John Sullivan  <sullivan@eazel.com>

	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(init_mime_capplet): Changed "Delete this MIME type..."
	to "Delete This MIME Type" because that follows the
	capitalization rules, and because there's no dialog
	involved so the "..." is a lie.

2001-02-20  John Sullivan  <sullivan@eazel.com>

	reviewed by: Seth Nickell  <seth@eazel.com>

	Fixed various small capplet bugs while pondering the
	big scary icon-related ones, including:

	Fixed bug 4768 (hardcoded icon file name in 
	nautilus-mime-type-capplet.c)

	Fixed bug 6636 (Text descenders clipped for selected item in mime list)

	Fixed bug 6641 (Icons clipped in mime list)

	Fixed bug 6647 ("Change Icon" dialog has silly title)

	* mime-type-capplet/nautilus-mime-type-capplet-dialogs.c:
	(nautilus_mime_type_capplet_show_new_mime_window): Simplified
	widgetry, tweaked layout and wording to look halfway decent and
	be clear.
	
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	Added constants for icon height/width in list. Added FIXME for
	huge hunks of copy/pasted code.